# APEX

./: .gitignore  APEX Clinical Suite.html  apex_full_audit_prompt.md  docker-compose.yml  generate_models.py  inspect_model.py  start-dev.sh
Demo_Videos/: convert_all.sh  convert_webp_to_mp4.py
Mobile/: APEX Mobile Clinical Companion.html
Mobile/js/: data.jsx  icons.jsx  main.jsx  shell.jsx  tab_alerts.jsx  tab_copilot.jsx  tab_scan.jsx
datasetforchina/: axia_test_ground_truth.csv  picha_test_ground_truth.csv  prepare_axia_test.py  prepare_picha_test.py  prepare_test_set.py  test_axia_model.py  test_ground_truth.csv  test_picha_h5.py  test_smartliva_h5.py
frontend/: Dockerfile  eslint.config.js  index.html  nginx.conf  vite.config.js
frontend/src/: App.jsx  index.css
services/auth/: Dockerfile  package-lock.json  package.json  server.js
services/axia/: .env.example  Dockerfile  app.py  requirements.txt  test_api_local.py  test_apis.py
services/gateway/: nginx.conf
services/smartliva/: Dockerfile  Dockerfile.production  conformal_calibrate.py  pyproject.toml  requirements.txt
services/smartliva/app/: __init__.py  conformal_engine.py  continual_learning.py  database.py  hybrid_analyzer.py  image_preprocessor.py  local_model.py  main.py  patient_routes.py  translator.py  video_processor.py  vision_analyzer.py
services/smartliva/tests/: __init__.py  test_lesion_images.py  test_model_predictions.py  test_parasite_images.py  test_set2_images.py
src/: app.jsx  axia.jsx  hub.jsx  login.jsx  picha.jsx  sidebar.jsx  smartliva.jsx  ui.jsx  worklist.jsx
(+107 files in other folders)
