[project]
name = "smartliva-backend"
version = "3.0.0"
description = "SmartLiva FastAPI backend — GPT-4o Vision engine"
requires-python = ">=3.10"
authors = [{name="SmartLiva"}]
dependencies = [
  "fastapi>=0.104.1",
  "uvicorn[standard]>=0.24.0",
  "pydantic>=2.5.0",
  "python-multipart>=0.0.6",
  "pillow>=10.1.0",
  "numpy>=1.24.3",
  "torch>=2.0.0",
  "torchvision>=0.15.0",
  "timm>=0.9.12",
  "openai>=1.14.0",
  "python-dotenv>=1.0.0",
  "httpx>=0.25.2",
  "aiofiles>=23.2.1",
  "sqlalchemy>=2.0.0",
  "pydicom>=2.4.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
